// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute nav endpoint error codes should handle internal server error (Error #5) 1`] = `
{
  "errorMessage": "System busy, please try again later.",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute nav endpoint error codes should handle supply query failed error (Error #8) 1`] = `
{
  "errorMessage": "internal error",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
